--- a/Paradiddlepadled.ioc
+++ b/Paradiddlepadled.ioc
@@ -12,7 +12,9 @@ Mcu.Package=LQFP100
 Mcu.Pin0=PA1
 Mcu.Pin1=PA2
 Mcu.Pin2=PA3
-Mcu.PinsNb=3
+Mcu.Pin3=PD12
+Mcu.Pin4=PD14
+Mcu.PinsNb=5
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -35,6 +37,10 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PD12.Locked=true
+PD12.Signal=GPIO_Output
+PD14.Locked=true
+PD14.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -63,7 +69,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
