Adjust timer control

--- a/Paradiddlepadled.ioc
+++ b/Paradiddlepadled.ioc
@@ -94,9 +94,10 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOInputMFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
-TIM2.IPParameters=Prescaler,Period
-TIM2.Period=16000
-TIM2.Prescaler=999
+TIM2.CounterMode=TIM_COUNTERMODE_UP
+TIM2.IPParameters=Prescaler,Period,CounterMode
+TIM2.Period=16000000
+TIM2.Prescaler=0
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
