--- a/Paradiddlepadled.ioc
+++ b/Paradiddlepadled.ioc
@@ -16,7 +16,8 @@ Mcu.Pin2=PA3
 Mcu.Pin3=PD12
 Mcu.Pin4=PD14
 Mcu.Pin5=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=6
+Mcu.Pin6=VP_TIM2_VS_no_output1
+Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -94,13 +95,17 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOInputMFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
+TIM2.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
 TIM2.CounterMode=TIM_COUNTERMODE_UP
-TIM2.IPParameters=Prescaler,Period,CounterMode
+TIM2.IPParameters=Prescaler,Period,CounterMode,Channel-PWM Generation1 No Output,Pulse-PWM Generation1 No Output
 TIM2.Period=16000000
 TIM2.Prescaler=0
+TIM2.Pulse-PWM\ Generation1\ No\ Output=2000000
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM2_VS_no_output1.Mode=PWM Generation1 No Output
+VP_TIM2_VS_no_output1.Signal=TIM2_VS_no_output1
 board=custom
 isbadioc=false
