--- a/Paradiddlepadled.ioc
+++ b/Paradiddlepadled.ioc
@@ -6,18 +6,24 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=TIM2
-Mcu.IP3=USART2
-Mcu.IPNb=4
+Mcu.IP3=TIM3
+Mcu.IP4=USART2
+Mcu.IPNb=5
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PA1
 Mcu.Pin1=PA2
+Mcu.Pin10=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin11=VP_TIM3_VS_no_output1
 Mcu.Pin2=PA3
 Mcu.Pin3=PD12
-Mcu.Pin4=PD14
-Mcu.Pin5=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin6=VP_TIM2_VS_no_output1
-Mcu.PinsNb=7
+Mcu.Pin4=PD13
+Mcu.Pin5=PD14
+Mcu.Pin6=PD15
+Mcu.Pin7=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin8=VP_TIM2_VS_no_output1
+Mcu.Pin9=VP_TIM3_VS_ControllerModeClock
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -34,6 +40,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.Mode=RTS_Only
 PA1.Signal=USART2_RTS
@@ -43,8 +50,12 @@ PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PD12.Locked=true
 PD12.Signal=GPIO_Output
+PD13.Locked=true
+PD13.Signal=GPIO_Output
 PD14.Locked=true
 PD14.Signal=GPIO_Output
+PD15.Locked=true
+PD15.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -73,7 +84,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
@@ -97,15 +108,26 @@ RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
 TIM2.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
 TIM2.CounterMode=TIM_COUNTERMODE_UP
-TIM2.IPParameters=Prescaler,Period,CounterMode,Channel-PWM Generation1 No Output,Pulse-PWM Generation1 No Output
-TIM2.Period=16000000
+TIM2.IPParameters=Prescaler,Period,CounterMode,Channel-PWM Generation1 No Output,Pulse-PWM Generation1 No Output,TIM_MasterOutputTrigger
+TIM2.Period=4000000
 TIM2.Prescaler=0
 TIM2.Pulse-PWM\ Generation1\ No\ Output=2000000
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_OC1REF
+TIM3.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
+TIM3.IPParameters=Channel-PWM Generation1 No Output,Pulse-PWM Generation1 No Output,Period
+TIM3.Period=3
+TIM3.Pulse-PWM\ Generation1\ No\ Output=1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM2_VS_no_output1.Mode=PWM Generation1 No Output
 VP_TIM2_VS_no_output1.Signal=TIM2_VS_no_output1
+VP_TIM3_VS_ClockSourceITR.Mode=TriggerSource_ITR1
+VP_TIM3_VS_ClockSourceITR.Signal=TIM3_VS_ClockSourceITR
+VP_TIM3_VS_ControllerModeClock.Mode=Clock Mode
+VP_TIM3_VS_ControllerModeClock.Signal=TIM3_VS_ControllerModeClock
+VP_TIM3_VS_no_output1.Mode=PWM Generation1 No Output
+VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
 board=custom
 isbadioc=false
