LED strip working with metronome (naive)

--- a/Paradiddlepadled.ioc
+++ b/Paradiddlepadled.ioc
@@ -1,35 +1,52 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.Request0=TIM4_CH1
+Dma.RequestsNb=1
+Dma.TIM4_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM4_CH1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.TIM4_CH1.0.Instance=DMA1_Stream0
+Dma.TIM4_CH1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM4_CH1.0.MemInc=DMA_MINC_ENABLE
+Dma.TIM4_CH1.0.Mode=DMA_CIRCULAR
+Dma.TIM4_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM4_CH1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM4_CH1.0.Priority=DMA_PRIORITY_LOW
+Dma.TIM4_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F411VET6
 Mcu.Family=STM32F4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=TIM2
-Mcu.IP3=TIM3
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP0=DMA
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=TIM2
+Mcu.IP4=TIM3
+Mcu.IP5=TIM4
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PA1
 Mcu.Pin1=PA2
-Mcu.Pin10=VP_TIM3_VS_ClockSourceITR
-Mcu.Pin11=VP_TIM3_VS_no_output1
+Mcu.Pin10=VP_TIM3_VS_ControllerModeClock
+Mcu.Pin11=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin12=VP_TIM3_VS_no_output1
+Mcu.Pin13=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PA3
 Mcu.Pin3=PD12
 Mcu.Pin4=PD13
 Mcu.Pin5=PD14
 Mcu.Pin6=PD15
-Mcu.Pin7=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin8=VP_TIM2_VS_no_output1
-Mcu.Pin9=VP_TIM3_VS_ControllerModeClock
-Mcu.PinsNb=12
+Mcu.Pin7=PB6
+Mcu.Pin8=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin9=VP_TIM2_VS_no_output1
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -41,6 +58,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.Mode=RTS_Only
 PA1.Signal=USART2_RTS
@@ -48,6 +66,7 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PB6.Signal=S_TIM4_CH1
 PD12.Locked=true
 PD12.Signal=GPIO_Output
 PD13.Locked=true
@@ -84,39 +103,55 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true
-RCC.AHBFreq_Value=16000000
-RCC.APB1Freq_Value=16000000
-RCC.APB2Freq_Value=16000000
-RCC.CortexFreq_Value=16000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true
+RCC.48MHZClocksFreq_Value=32000000
+RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
+RCC.AHBFreq_Value=32000000
+RCC.APB1Freq_Value=32000000
+RCC.APB1TimFreq_Value=32000000
+RCC.APB2Freq_Value=32000000
+RCC.APB2TimFreq_Value=32000000
+RCC.CortexFreq_Value=32000000
+RCC.EthernetFreq_Value=64000000
+RCC.FCLKCortexFreq_Value=32000000
 RCC.FamilyName=M
+RCC.HCLKFreq_Value=32000000
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=96000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB2Freq_Value,CortexFreq_Value,FamilyName,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,PLLCLKFreq_Value,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.PLLCLKFreq_Value=96000000
-RCC.PLLQCLKFreq_Value=48000000
+RCC.MCO2PinFreq_Value=64000000
+RCC.PLLCLKFreq_Value=64000000
+RCC.PLLM=8
+RCC.PLLN=64
+RCC.PLLQCLKFreq_Value=32000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=12500000
-RCC.SYSCLKFreq_VALUE=16000000
+RCC.SYSCLKFreq_VALUE=64000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.VCOI2SOutputFreq_Value=192000000
-RCC.VCOInputFreq_Value=1000000
+RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=1000000
-RCC.VCOOutputFreq_Value=192000000
+RCC.VCOOutputFreq_Value=128000000
 RCC.VcooutputI2S=96000000
+SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
+SH.S_TIM4_CH1.ConfNb=1
 TIM2.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
 TIM2.CounterMode=TIM_COUNTERMODE_UP
 TIM2.IPParameters=Prescaler,Period,CounterMode,Channel-PWM Generation1 No Output,Pulse-PWM Generation1 No Output,TIM_MasterOutputTrigger
-TIM2.Period=4000000
+TIM2.Period=16000000
 TIM2.Prescaler=0
-TIM2.Pulse-PWM\ Generation1\ No\ Output=2000000
+TIM2.Pulse-PWM\ Generation1\ No\ Output=4000000
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_OC1REF
 TIM3.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
 TIM3.IPParameters=Channel-PWM Generation1 No Output,Pulse-PWM Generation1 No Output,Period
 TIM3.Period=3
 TIM3.Pulse-PWM\ Generation1\ No\ Output=1
+TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM4.IPParameters=Channel-PWM Generation1 CH1,Period
+TIM4.Period=40
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
@@ -129,5 +164,7 @@ VP_TIM3_VS_ControllerModeClock.Mode=Clock Mode
 VP_TIM3_VS_ControllerModeClock.Signal=TIM3_VS_ControllerModeClock
 VP_TIM3_VS_no_output1.Mode=PWM Generation1 No Output
 VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=custom
 isbadioc=false
