--- a/Paradiddlepadled.ioc
+++ b/Paradiddlepadled.ioc
@@ -1,4 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.IPParameters=Rank-2\#ChannelRegularConversion,master,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-2\#ChannelRegularConversion=1
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.master=1
 Dma.Request0=TIM4_CH1
 Dma.RequestsNb=1
 Dma.TIM4_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
@@ -15,31 +21,33 @@ File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F411VET6
 Mcu.Family=STM32F4
-Mcu.IP0=DMA
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=TIM2
-Mcu.IP4=TIM3
-Mcu.IP5=TIM4
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP0=ADC1
+Mcu.IP1=DMA
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=TIM2
+Mcu.IP5=TIM3
+Mcu.IP6=TIM4
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PA1
 Mcu.Pin1=PA2
-Mcu.Pin10=VP_TIM3_VS_ControllerModeClock
-Mcu.Pin11=VP_TIM3_VS_ClockSourceITR
-Mcu.Pin12=VP_TIM3_VS_no_output1
-Mcu.Pin13=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin10=VP_TIM2_VS_no_output1
+Mcu.Pin11=VP_TIM3_VS_ControllerModeClock
+Mcu.Pin12=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin13=VP_TIM3_VS_no_output1
+Mcu.Pin14=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PA3
-Mcu.Pin3=PD12
-Mcu.Pin4=PD13
-Mcu.Pin5=PD14
-Mcu.Pin6=PD15
-Mcu.Pin7=PB6
-Mcu.Pin8=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin9=VP_TIM2_VS_no_output1
-Mcu.PinsNb=14
+Mcu.Pin3=PC4
+Mcu.Pin4=PD12
+Mcu.Pin5=PD13
+Mcu.Pin6=PD14
+Mcu.Pin7=PD15
+Mcu.Pin8=PB6
+Mcu.Pin9=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -67,6 +75,7 @@ PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PB6.Signal=S_TIM4_CH1
+PC4.Signal=ADCx_IN14
 PD12.Locked=true
 PD12.Signal=GPIO_Output
 PD13.Locked=true
@@ -103,7 +112,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.48MHZClocksFreq_Value=32000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=32000000
@@ -136,6 +145,8 @@ RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=1000000
 RCC.VCOOutputFreq_Value=128000000
 RCC.VcooutputI2S=96000000
+SH.ADCx_IN14.0=ADC1_IN14,IN14
+SH.ADCx_IN14.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
 TIM2.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
