--- a/Paradiddlepadled.ioc
+++ b/Paradiddlepadled.ioc
@@ -18,36 +18,46 @@ Dma.TIM4_CH1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.TIM4_CH1.0.Priority=DMA_PRIORITY_LOW
 Dma.TIM4_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
+I2S1.ErrorAudioFreq=0.0 %
+I2S1.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
+I2S1.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq
+I2S1.Instance=SPI$Index
+I2S1.RealAudioFreq=8.0 KHz
+I2S1.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
 Mcu.CPN=STM32F411VET6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=TIM2
-Mcu.IP5=TIM3
-Mcu.IP6=TIM4
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP2=I2S1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=TIM2
+Mcu.IP6=TIM3
+Mcu.IP7=TIM4
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PA1
 Mcu.Pin1=PA2
-Mcu.Pin10=VP_TIM2_VS_no_output1
-Mcu.Pin11=VP_TIM3_VS_ControllerModeClock
-Mcu.Pin12=VP_TIM3_VS_ClockSourceITR
-Mcu.Pin13=VP_TIM3_VS_no_output1
-Mcu.Pin14=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin10=PD15
+Mcu.Pin11=PB6
+Mcu.Pin12=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM2_VS_no_output1
+Mcu.Pin14=VP_TIM3_VS_ControllerModeClock
+Mcu.Pin15=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin16=VP_TIM3_VS_no_output1
+Mcu.Pin17=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PA3
-Mcu.Pin3=PC4
-Mcu.Pin4=PD12
-Mcu.Pin5=PD13
-Mcu.Pin6=PD14
-Mcu.Pin7=PD15
-Mcu.Pin8=PB6
-Mcu.Pin9=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=15
+Mcu.Pin3=PA4
+Mcu.Pin4=PA5
+Mcu.Pin5=PA7
+Mcu.Pin6=PC4
+Mcu.Pin7=PD12
+Mcu.Pin8=PD13
+Mcu.Pin9=PD14
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -74,6 +84,12 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA4.Mode=Half_Duplex_Master
+PA4.Signal=I2S1_WS
+PA5.Mode=Half_Duplex_Master
+PA5.Signal=I2S1_CK
+PA7.Mode=Half_Duplex_Master
+PA7.Signal=I2S1_SD
 PB6.Signal=S_TIM4_CH1
 PC4.Signal=ADCx_IN14
 PD12.Locked=true
