Playing sample wav working (or almost...)

--- a/Paradiddlepadled.ioc
+++ b/Paradiddlepadled.ioc
@@ -6,7 +6,21 @@ ADC1.Rank-2\#ChannelRegularConversion=1
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
 Dma.Request0=TIM4_CH1
-Dma.RequestsNb=1
+Dma.Request1=SPI3_TX
+Dma.RequestsNb=2
+Dma.SPI3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI3_TX.1.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SPI3_TX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SPI3_TX.1.Instance=DMA1_Stream5
+Dma.SPI3_TX.1.MemBurst=DMA_MBURST_SINGLE
+Dma.SPI3_TX.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI3_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI3_TX.1.Mode=DMA_NORMAL
+Dma.SPI3_TX.1.PeriphBurst=DMA_PBURST_SINGLE
+Dma.SPI3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI3_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI3_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.SPI3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 Dma.TIM4_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.TIM4_CH1.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.TIM4_CH1.0.Instance=DMA1_Stream0
@@ -18,46 +32,53 @@ Dma.TIM4_CH1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.TIM4_CH1.0.Priority=DMA_PRIORITY_LOW
 Dma.TIM4_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
-I2S1.ErrorAudioFreq=0.0 %
-I2S1.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
-I2S1.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq
-I2S1.Instance=SPI$Index
-I2S1.RealAudioFreq=8.0 KHz
-I2S1.VirtualMode=I2S_MODE_MASTER
+I2S3.ErrorAudioFreq=-0.27 %
+I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
+I2S3.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq
+I2S3.Instance=SPI$Index
+I2S3.RealAudioFreq=7.978 KHz
+I2S3.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
 Mcu.CPN=STM32F411VET6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
-Mcu.IP2=I2S1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=TIM2
-Mcu.IP6=TIM3
-Mcu.IP7=TIM4
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP10=USART2
+Mcu.IP2=I2C1
+Mcu.IP3=I2S3
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SPI2
+Mcu.IP7=TIM2
+Mcu.IP8=TIM3
+Mcu.IP9=TIM4
+Mcu.IPNb=11
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PA1
-Mcu.Pin1=PA2
-Mcu.Pin10=PD15
-Mcu.Pin11=PB6
-Mcu.Pin12=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin13=VP_TIM2_VS_no_output1
-Mcu.Pin14=VP_TIM3_VS_ControllerModeClock
-Mcu.Pin15=VP_TIM3_VS_ClockSourceITR
-Mcu.Pin16=VP_TIM3_VS_no_output1
-Mcu.Pin17=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin2=PA3
-Mcu.Pin3=PA4
-Mcu.Pin4=PA5
-Mcu.Pin5=PA7
-Mcu.Pin6=PC4
-Mcu.Pin7=PD12
-Mcu.Pin8=PD13
-Mcu.Pin9=PD14
-Mcu.PinsNb=18
+Mcu.Pin0=PC2
+Mcu.Pin1=PA1
+Mcu.Pin10=PD14
+Mcu.Pin11=PD15
+Mcu.Pin12=PC7
+Mcu.Pin13=PC12
+Mcu.Pin14=PB6
+Mcu.Pin15=PB7
+Mcu.Pin16=PB8
+Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM2_VS_no_output1
+Mcu.Pin19=VP_TIM3_VS_ControllerModeClock
+Mcu.Pin2=PA2
+Mcu.Pin20=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin21=VP_TIM3_VS_no_output1
+Mcu.Pin22=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin3=PA3
+Mcu.Pin4=PA4
+Mcu.Pin5=PC4
+Mcu.Pin6=PB10
+Mcu.Pin7=PB12
+Mcu.Pin8=PD12
+Mcu.Pin9=PD13
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -65,6 +86,7 @@ MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -85,13 +107,23 @@ PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA4.Mode=Half_Duplex_Master
-PA4.Signal=I2S1_WS
-PA5.Mode=Half_Duplex_Master
-PA5.Signal=I2S1_CK
-PA7.Mode=Half_Duplex_Master
-PA7.Signal=I2S1_SD
+PA4.Signal=I2S3_WS
+PB10.Mode=Simplex_Bidirectional_Slave
+PB10.Signal=SPI2_SCK
+PB12.Mode=Half_Duplex_Master
+PB12.Signal=I2S3_CK
 PB6.Signal=S_TIM4_CH1
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
+PC12.Mode=Half_Duplex_Master
+PC12.Signal=I2S3_SD
+PC2.Mode=Simplex_Bidirectional_Slave
+PC2.Signal=SPI2_MISO
 PC4.Signal=ADCx_IN14
+PC7.Mode=Master_Clock_Activated
+PC7.Signal=I2S3_MCK
 PD12.Locked=true
 PD12.Signal=GPIO_Output
 PD13.Locked=true
@@ -128,7 +160,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_I2S3_Init-I2S3-false-HAL-true
 RCC.48MHZClocksFreq_Value=32000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=32000000
@@ -165,6 +197,10 @@ SH.ADCx_IN14.0=ADC1_IN14,IN14
 SH.ADCx_IN14.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
+SPI2.Direction=SPI_DIRECTION_1LINE
+SPI2.IPParameters=VirtualType,Mode,Direction
+SPI2.Mode=SPI_MODE_SLAVE
+SPI2.VirtualType=VM_SLAVE
 TIM2.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
 TIM2.CounterMode=TIM_COUNTERMODE_UP
 TIM2.IPParameters=Prescaler,Period,CounterMode,Channel-PWM Generation1 No Output,Pulse-PWM Generation1 No Output,TIM_MasterOutputTrigger
