Button control working

--- a/Paradiddlepadled.ioc
+++ b/Paradiddlepadled.ioc
@@ -32,6 +32,7 @@ Dma.TIM4_CH1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.TIM4_CH1.0.Priority=DMA_PRIORITY_LOW
 Dma.TIM4_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 I2S3.ErrorAudioFreq=-0.27 %
 I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
 I2S3.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq
@@ -56,29 +57,30 @@ Mcu.IPNb=11
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC2
-Mcu.Pin1=PA1
-Mcu.Pin10=PD14
-Mcu.Pin11=PD15
-Mcu.Pin12=PC7
-Mcu.Pin13=PC12
-Mcu.Pin14=PB6
-Mcu.Pin15=PB7
-Mcu.Pin16=PB8
-Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin18=VP_TIM2_VS_no_output1
-Mcu.Pin19=VP_TIM3_VS_ControllerModeClock
-Mcu.Pin2=PA2
-Mcu.Pin20=VP_TIM3_VS_ClockSourceITR
-Mcu.Pin21=VP_TIM3_VS_no_output1
-Mcu.Pin22=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin3=PA3
-Mcu.Pin4=PA4
-Mcu.Pin5=PC4
-Mcu.Pin6=PB10
-Mcu.Pin7=PB12
-Mcu.Pin8=PD12
-Mcu.Pin9=PD13
-Mcu.PinsNb=23
+Mcu.Pin1=PA0-WKUP
+Mcu.Pin10=PD13
+Mcu.Pin11=PD14
+Mcu.Pin12=PD15
+Mcu.Pin13=PC7
+Mcu.Pin14=PC12
+Mcu.Pin15=PB6
+Mcu.Pin16=PB7
+Mcu.Pin17=PB8
+Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM2_VS_no_output1
+Mcu.Pin2=PA1
+Mcu.Pin20=VP_TIM3_VS_ControllerModeClock
+Mcu.Pin21=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin22=VP_TIM3_VS_no_output1
+Mcu.Pin23=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin3=PA2
+Mcu.Pin4=PA3
+Mcu.Pin5=PA4
+Mcu.Pin6=PC4
+Mcu.Pin7=PB10
+Mcu.Pin8=PB12
+Mcu.Pin9=PD12
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -88,6 +90,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -100,6 +103,11 @@ NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PA0-WKUP.GPIO_Label=GPIO_USER_BUTTON
+PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPXTI0
 PA1.Mode=RTS_Only
 PA1.Signal=USART2_RTS
 PA2.Mode=Asynchronous
@@ -195,6 +203,8 @@ RCC.VCOOutputFreq_Value=128000000
 RCC.VcooutputI2S=96000000
 SH.ADCx_IN14.0=ADC1_IN14,IN14
 SH.ADCx_IN14.ConfNb=1
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
 SPI2.Direction=SPI_DIRECTION_1LINE
