Working hit detection by ADC interrupt

--- a/Paradiddlepadled.ioc
+++ b/Paradiddlepadled.ioc
@@ -1,9 +1,63 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_14
-ADC1.IPParameters=Rank-2\#ChannelRegularConversion,master,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.Channel-21\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.Channel-22\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.Channel-23\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.Channel-24\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.Channel-25\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.Channel-26\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.Channel-27\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.Channel-28\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.Channel-29\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.Channel-30\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.Channel-31\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.Channel-32\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.Channel-33\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.Channel-34\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.Channel-35\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.ContinuousConvMode=ENABLE
+ADC1.EOCSelection=ADC_EOC_SEQ_CONV
+ADC1.EnableAnalogWatchDog=true
+ADC1.HighThreshold=250
+ADC1.IPParameters=Rank-3\#ChannelRegularConversion,master,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversionFlag,EnableAnalogWatchDog,WatchdogChannel,ITMode,HighThreshold,ContinuousConvMode,NbrOfConversion,EOCSelection,Resolution,Rank-21\#ChannelRegularConversion,Channel-21\#ChannelRegularConversion,SamplingTime-21\#ChannelRegularConversion,Rank-22\#ChannelRegularConversion,Channel-22\#ChannelRegularConversion,SamplingTime-22\#ChannelRegularConversion,Rank-23\#ChannelRegularConversion,Channel-23\#ChannelRegularConversion,SamplingTime-23\#ChannelRegularConversion,Rank-24\#ChannelRegularConversion,Channel-24\#ChannelRegularConversion,SamplingTime-24\#ChannelRegularConversion,Rank-25\#ChannelRegularConversion,Channel-25\#ChannelRegularConversion,SamplingTime-25\#ChannelRegularConversion,Rank-26\#ChannelRegularConversion,Channel-26\#ChannelRegularConversion,SamplingTime-26\#ChannelRegularConversion,Rank-27\#ChannelRegularConversion,Channel-27\#ChannelRegularConversion,SamplingTime-27\#ChannelRegularConversion,Rank-28\#ChannelRegularConversion,Channel-28\#ChannelRegularConversion,SamplingTime-28\#ChannelRegularConversion,Rank-29\#ChannelRegularConversion,Channel-29\#ChannelRegularConversion,SamplingTime-29\#ChannelRegularConversion,Rank-30\#ChannelRegularConversion,Channel-30\#ChannelRegularConversion,SamplingTime-30\#ChannelRegularConversion,Rank-31\#ChannelRegularConversion,Channel-31\#ChannelRegularConversion,SamplingTime-31\#ChannelRegularConversion,Rank-32\#ChannelRegularConversion,Channel-32\#ChannelRegularConversion,SamplingTime-32\#ChannelRegularConversion,Rank-33\#ChannelRegularConversion,Channel-33\#ChannelRegularConversion,SamplingTime-33\#ChannelRegularConversion,Rank-34\#ChannelRegularConversion,Channel-34\#ChannelRegularConversion,SamplingTime-34\#ChannelRegularConversion,Rank-35\#ChannelRegularConversion,Channel-35\#ChannelRegularConversion,SamplingTime-35\#ChannelRegularConversion,InjNumberOfConversion
+ADC1.ITMode=ENABLE
+ADC1.InjNumberOfConversion=0
+ADC1.NbrOfConversion=16
 ADC1.NbrOfConversionFlag=1
-ADC1.Rank-2\#ChannelRegularConversion=1
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.Rank-21\#ChannelRegularConversion=2
+ADC1.Rank-22\#ChannelRegularConversion=3
+ADC1.Rank-23\#ChannelRegularConversion=4
+ADC1.Rank-24\#ChannelRegularConversion=5
+ADC1.Rank-25\#ChannelRegularConversion=6
+ADC1.Rank-26\#ChannelRegularConversion=7
+ADC1.Rank-27\#ChannelRegularConversion=8
+ADC1.Rank-28\#ChannelRegularConversion=9
+ADC1.Rank-29\#ChannelRegularConversion=10
+ADC1.Rank-3\#ChannelRegularConversion=1
+ADC1.Rank-30\#ChannelRegularConversion=11
+ADC1.Rank-31\#ChannelRegularConversion=12
+ADC1.Rank-32\#ChannelRegularConversion=13
+ADC1.Rank-33\#ChannelRegularConversion=14
+ADC1.Rank-34\#ChannelRegularConversion=15
+ADC1.Rank-35\#ChannelRegularConversion=16
+ADC1.Resolution=ADC_RESOLUTION_10B
+ADC1.SamplingTime-21\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-22\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-23\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-24\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-25\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-26\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-27\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-28\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-29\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-30\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-31\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-32\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-33\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-34\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-35\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.WatchdogChannel=ADC_CHANNEL_14
 ADC1.master=1
 Dma.Request0=TIM4_CH1
 Dma.Request1=SPI3_TX
@@ -58,34 +112,35 @@ Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC2
 Mcu.Pin1=PA0-WKUP
-Mcu.Pin10=PD13
-Mcu.Pin11=PD14
-Mcu.Pin12=PD15
-Mcu.Pin13=PC7
-Mcu.Pin14=PC12
+Mcu.Pin10=PD14
+Mcu.Pin11=PD15
+Mcu.Pin12=PC7
+Mcu.Pin13=PC12
+Mcu.Pin14=PD4
 Mcu.Pin15=PB6
 Mcu.Pin16=PB7
 Mcu.Pin17=PB8
 Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin19=VP_TIM2_VS_no_output1
-Mcu.Pin2=PA1
+Mcu.Pin2=PA2
 Mcu.Pin20=VP_TIM3_VS_ControllerModeClock
 Mcu.Pin21=VP_TIM3_VS_ClockSourceITR
 Mcu.Pin22=VP_TIM3_VS_no_output1
 Mcu.Pin23=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin3=PA2
-Mcu.Pin4=PA3
-Mcu.Pin5=PA4
-Mcu.Pin6=PC4
-Mcu.Pin7=PB10
-Mcu.Pin8=PB12
-Mcu.Pin9=PD12
+Mcu.Pin3=PA3
+Mcu.Pin4=PA4
+Mcu.Pin5=PC4
+Mcu.Pin6=PB10
+Mcu.Pin7=PB12
+Mcu.Pin8=PD12
+Mcu.Pin9=PD13
 Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
+NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
@@ -108,8 +163,6 @@ PA0-WKUP.GPIO_Label=GPIO_USER_BUTTON
 PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPXTI0
-PA1.Mode=RTS_Only
-PA1.Signal=USART2_RTS
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
@@ -129,7 +182,12 @@ PC12.Mode=Half_Duplex_Master
 PC12.Signal=I2S3_SD
 PC2.Mode=Simplex_Bidirectional_Slave
 PC2.Signal=SPI2_MISO
+PC4.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PC4.GPIO_Mode=GPIO_MODE_ANALOG
+PC4.GPIO_PuPd=GPIO_NOPULL
+PC4.Locked=true
 PC4.Signal=ADCx_IN14
+PC7.Locked=true
 PC7.Mode=Master_Clock_Activated
 PC7.Signal=I2S3_MCK
 PD12.Locked=true
@@ -140,6 +198,9 @@ PD14.Locked=true
 PD14.Signal=GPIO_Output
 PD15.Locked=true
 PD15.Signal=GPIO_Output
+PD4.Locked=true
+PD4.Mode=RTS_Only
+PD4.Signal=USART2_RTS
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
