--- a/Paradiddlepadled.ioc
+++ b/Paradiddlepadled.ioc
@@ -1,62 +1,17 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-21\#ChannelRegularConversion=ADC_CHANNEL_14
-ADC1.Channel-22\#ChannelRegularConversion=ADC_CHANNEL_14
-ADC1.Channel-23\#ChannelRegularConversion=ADC_CHANNEL_14
-ADC1.Channel-24\#ChannelRegularConversion=ADC_CHANNEL_14
-ADC1.Channel-25\#ChannelRegularConversion=ADC_CHANNEL_14
-ADC1.Channel-26\#ChannelRegularConversion=ADC_CHANNEL_14
-ADC1.Channel-27\#ChannelRegularConversion=ADC_CHANNEL_14
-ADC1.Channel-28\#ChannelRegularConversion=ADC_CHANNEL_14
-ADC1.Channel-29\#ChannelRegularConversion=ADC_CHANNEL_14
 ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_14
-ADC1.Channel-30\#ChannelRegularConversion=ADC_CHANNEL_14
-ADC1.Channel-31\#ChannelRegularConversion=ADC_CHANNEL_14
-ADC1.Channel-32\#ChannelRegularConversion=ADC_CHANNEL_14
-ADC1.Channel-33\#ChannelRegularConversion=ADC_CHANNEL_14
-ADC1.Channel-34\#ChannelRegularConversion=ADC_CHANNEL_14
-ADC1.Channel-35\#ChannelRegularConversion=ADC_CHANNEL_14
 ADC1.ContinuousConvMode=ENABLE
 ADC1.EOCSelection=ADC_EOC_SEQ_CONV
 ADC1.EnableAnalogWatchDog=true
-ADC1.HighThreshold=255
-ADC1.IPParameters=Rank-3\#ChannelRegularConversion,master,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversionFlag,EnableAnalogWatchDog,WatchdogChannel,ITMode,HighThreshold,ContinuousConvMode,NbrOfConversion,EOCSelection,Resolution,Rank-21\#ChannelRegularConversion,Channel-21\#ChannelRegularConversion,SamplingTime-21\#ChannelRegularConversion,Rank-22\#ChannelRegularConversion,Channel-22\#ChannelRegularConversion,SamplingTime-22\#ChannelRegularConversion,Rank-23\#ChannelRegularConversion,Channel-23\#ChannelRegularConversion,SamplingTime-23\#ChannelRegularConversion,Rank-24\#ChannelRegularConversion,Channel-24\#ChannelRegularConversion,SamplingTime-24\#ChannelRegularConversion,Rank-25\#ChannelRegularConversion,Channel-25\#ChannelRegularConversion,SamplingTime-25\#ChannelRegularConversion,Rank-26\#ChannelRegularConversion,Channel-26\#ChannelRegularConversion,SamplingTime-26\#ChannelRegularConversion,Rank-27\#ChannelRegularConversion,Channel-27\#ChannelRegularConversion,SamplingTime-27\#ChannelRegularConversion,Rank-28\#ChannelRegularConversion,Channel-28\#ChannelRegularConversion,SamplingTime-28\#ChannelRegularConversion,Rank-29\#ChannelRegularConversion,Channel-29\#ChannelRegularConversion,SamplingTime-29\#ChannelRegularConversion,Rank-30\#ChannelRegularConversion,Channel-30\#ChannelRegularConversion,SamplingTime-30\#ChannelRegularConversion,Rank-31\#ChannelRegularConversion,Channel-31\#ChannelRegularConversion,SamplingTime-31\#ChannelRegularConversion,Rank-32\#ChannelRegularConversion,Channel-32\#ChannelRegularConversion,SamplingTime-32\#ChannelRegularConversion,Rank-33\#ChannelRegularConversion,Channel-33\#ChannelRegularConversion,SamplingTime-33\#ChannelRegularConversion,Rank-34\#ChannelRegularConversion,Channel-34\#ChannelRegularConversion,SamplingTime-34\#ChannelRegularConversion,Rank-35\#ChannelRegularConversion,Channel-35\#ChannelRegularConversion,SamplingTime-35\#ChannelRegularConversion,InjNumberOfConversion
+ADC1.HighThreshold=1100
+ADC1.IPParameters=Rank-3\#ChannelRegularConversion,master,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversionFlag,EnableAnalogWatchDog,WatchdogChannel,ITMode,HighThreshold,ContinuousConvMode,NbrOfConversion,EOCSelection,Resolution,InjNumberOfConversion
 ADC1.ITMode=ENABLE
 ADC1.InjNumberOfConversion=0
-ADC1.NbrOfConversion=16
+ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
-ADC1.Rank-21\#ChannelRegularConversion=2
-ADC1.Rank-22\#ChannelRegularConversion=3
-ADC1.Rank-23\#ChannelRegularConversion=4
-ADC1.Rank-24\#ChannelRegularConversion=5
-ADC1.Rank-25\#ChannelRegularConversion=6
-ADC1.Rank-26\#ChannelRegularConversion=7
-ADC1.Rank-27\#ChannelRegularConversion=8
-ADC1.Rank-28\#ChannelRegularConversion=9
-ADC1.Rank-29\#ChannelRegularConversion=10
 ADC1.Rank-3\#ChannelRegularConversion=1
-ADC1.Rank-30\#ChannelRegularConversion=11
-ADC1.Rank-31\#ChannelRegularConversion=12
-ADC1.Rank-32\#ChannelRegularConversion=13
-ADC1.Rank-33\#ChannelRegularConversion=14
-ADC1.Rank-34\#ChannelRegularConversion=15
-ADC1.Rank-35\#ChannelRegularConversion=16
-ADC1.Resolution=ADC_RESOLUTION_10B
-ADC1.SamplingTime-21\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
-ADC1.SamplingTime-22\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
-ADC1.SamplingTime-23\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
-ADC1.SamplingTime-24\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
-ADC1.SamplingTime-25\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
-ADC1.SamplingTime-26\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
-ADC1.SamplingTime-27\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
-ADC1.SamplingTime-28\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
-ADC1.SamplingTime-29\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.Resolution=ADC_RESOLUTION_12B
 ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
-ADC1.SamplingTime-30\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
-ADC1.SamplingTime-31\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
-ADC1.SamplingTime-32\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
-ADC1.SamplingTime-33\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
-ADC1.SamplingTime-34\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
-ADC1.SamplingTime-35\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 ADC1.WatchdogChannel=ADC_CHANNEL_14
 ADC1.master=1
 Dma.Request0=TIM4_CH1
