Changing some button inputs for accelerometer

--- a/Paradiddlepadled.ioc
+++ b/Paradiddlepadled.ioc
@@ -14,32 +14,32 @@ ADC1.Resolution=ADC_RESOLUTION_12B
 ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 ADC1.WatchdogChannel=ADC_CHANNEL_14
 ADC1.master=1
-Dma.Request0=TIM4_CH1
-Dma.Request1=SPI3_TX
+Dma.Request0=SPI3_TX
+Dma.Request1=TIM4_CH2
 Dma.RequestsNb=2
-Dma.SPI3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI3_TX.1.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.SPI3_TX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.SPI3_TX.1.Instance=DMA1_Stream5
-Dma.SPI3_TX.1.MemBurst=DMA_MBURST_SINGLE
-Dma.SPI3_TX.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.SPI3_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.SPI3_TX.1.Mode=DMA_NORMAL
-Dma.SPI3_TX.1.PeriphBurst=DMA_PBURST_SINGLE
-Dma.SPI3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.SPI3_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI3_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.SPI3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.TIM4_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.TIM4_CH1.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.TIM4_CH1.0.Instance=DMA1_Stream0
-Dma.TIM4_CH1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.TIM4_CH1.0.MemInc=DMA_MINC_ENABLE
-Dma.TIM4_CH1.0.Mode=DMA_CIRCULAR
-Dma.TIM4_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.TIM4_CH1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM4_CH1.0.Priority=DMA_PRIORITY_LOW
-Dma.TIM4_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI3_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI3_TX.0.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SPI3_TX.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SPI3_TX.0.Instance=DMA1_Stream5
+Dma.SPI3_TX.0.MemBurst=DMA_MBURST_SINGLE
+Dma.SPI3_TX.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI3_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI3_TX.0.Mode=DMA_NORMAL
+Dma.SPI3_TX.0.PeriphBurst=DMA_PBURST_SINGLE
+Dma.SPI3_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI3_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI3_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.SPI3_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.TIM4_CH2.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM4_CH2.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.TIM4_CH2.1.Instance=DMA1_Stream3
+Dma.TIM4_CH2.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM4_CH2.1.MemInc=DMA_MINC_ENABLE
+Dma.TIM4_CH2.1.Mode=DMA_CIRCULAR
+Dma.TIM4_CH2.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM4_CH2.1.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM4_CH2.1.Priority=DMA_PRIORITY_LOW
+Dma.TIM4_CH2.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2S3.ErrorAudioFreq=-0.27 %
@@ -65,31 +65,32 @@ Mcu.IP9=TIM4
 Mcu.IPNb=11
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PC2
-Mcu.Pin1=PA0-WKUP
-Mcu.Pin10=PD14
-Mcu.Pin11=PD15
-Mcu.Pin12=PC7
-Mcu.Pin13=PC12
-Mcu.Pin14=PD4
-Mcu.Pin15=PB6
-Mcu.Pin16=PB7
-Mcu.Pin17=PB8
-Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin19=VP_TIM2_VS_no_output1
-Mcu.Pin2=PA2
-Mcu.Pin20=VP_TIM3_VS_ControllerModeClock
-Mcu.Pin21=VP_TIM3_VS_ClockSourceITR
-Mcu.Pin22=VP_TIM3_VS_no_output1
-Mcu.Pin23=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin3=PA3
-Mcu.Pin4=PA4
-Mcu.Pin5=PC4
-Mcu.Pin6=PB10
-Mcu.Pin7=PB12
-Mcu.Pin8=PD12
-Mcu.Pin9=PD13
-Mcu.PinsNb=24
+Mcu.Pin0=PE4
+Mcu.Pin1=PC2
+Mcu.Pin10=PD13
+Mcu.Pin11=PD14
+Mcu.Pin12=PD15
+Mcu.Pin13=PC7
+Mcu.Pin14=PC12
+Mcu.Pin15=PD4
+Mcu.Pin16=PB6
+Mcu.Pin17=PB7
+Mcu.Pin18=PB9
+Mcu.Pin19=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin2=PA0-WKUP
+Mcu.Pin20=VP_TIM2_VS_no_output1
+Mcu.Pin21=VP_TIM3_VS_ControllerModeClock
+Mcu.Pin22=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin23=VP_TIM3_VS_no_output1
+Mcu.Pin24=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin3=PA2
+Mcu.Pin4=PA3
+Mcu.Pin5=PA4
+Mcu.Pin6=PC4
+Mcu.Pin7=PB10
+Mcu.Pin8=PB12
+Mcu.Pin9=PD12
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -97,10 +98,11 @@ MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -128,11 +130,14 @@ PB10.Mode=Simplex_Bidirectional_Slave
 PB10.Signal=SPI2_SCK
 PB12.Mode=Half_Duplex_Master
 PB12.Signal=I2S3_CK
-PB6.Signal=S_TIM4_CH1
-PB7.Mode=I2C
-PB7.Signal=I2C1_SDA
-PB8.Mode=I2C
-PB8.Signal=I2C1_SCL
+PB6.Locked=true
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Locked=true
+PB7.Signal=S_TIM4_CH2
+PB9.Locked=true
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PC12.Mode=Half_Duplex_Master
 PC12.Signal=I2S3_SD
 PC2.Mode=Simplex_Bidirectional_Slave
@@ -156,6 +161,8 @@ PD15.Signal=GPIO_Output
 PD4.Locked=true
 PD4.Mode=RTS_Only
 PD4.Signal=USART2_RTS
+PE4.Locked=true
+PE4.Signal=GPXTI4
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -164,7 +171,7 @@ ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
-ProjectManager.DeletePrevious=true
+ProjectManager.DeletePrevious=false
 ProjectManager.DeviceId=STM32F411VETx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.27.1
 ProjectManager.FreePins=false
@@ -184,7 +191,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_I2S3_Init-I2S3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true,9-MX_I2S3_Init-I2S3-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.48MHZClocksFreq_Value=32000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=32000000
@@ -221,8 +228,10 @@ SH.ADCx_IN14.0=ADC1_IN14,IN14
 SH.ADCx_IN14.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
-SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
-SH.S_TIM4_CH1.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
+SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
+SH.S_TIM4_CH2.ConfNb=1
 SPI2.Direction=SPI_DIRECTION_1LINE
 SPI2.IPParameters=VirtualType,Mode,Direction
 SPI2.Mode=SPI_MODE_SLAVE
@@ -238,8 +247,8 @@ TIM3.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
 TIM3.IPParameters=Channel-PWM Generation1 No Output,Pulse-PWM Generation1 No Output,Period
 TIM3.Period=3
 TIM3.Pulse-PWM\ Generation1\ No\ Output=1
-TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM4.IPParameters=Channel-PWM Generation1 CH1,Period
+TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM4.IPParameters=Channel-PWM Generation2 CH2,Period
 TIM4.Period=40
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
