Fine-tuning hit accuracy detection

--- a/Paradiddlepadled.ioc
+++ b/Paradiddlepadled.ioc
@@ -3,14 +3,15 @@ ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_14
 ADC1.ContinuousConvMode=ENABLE
 ADC1.EOCSelection=ADC_EOC_SEQ_CONV
 ADC1.EnableAnalogWatchDog=true
-ADC1.HighThreshold=1100
-ADC1.IPParameters=Rank-3\#ChannelRegularConversion,master,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversionFlag,EnableAnalogWatchDog,WatchdogChannel,ITMode,HighThreshold,ContinuousConvMode,NbrOfConversion,EOCSelection,Resolution,InjNumberOfConversion
+ADC1.HighThreshold=260
+ADC1.IPParameters=Rank-3\#ChannelRegularConversion,master,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversionFlag,EnableAnalogWatchDog,WatchdogChannel,ITMode,HighThreshold,ContinuousConvMode,NbrOfConversion,EOCSelection,Resolution,InjNumberOfConversion,LowThreshold
 ADC1.ITMode=ENABLE
 ADC1.InjNumberOfConversion=0
+ADC1.LowThreshold=0
 ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-3\#ChannelRegularConversion=1
-ADC1.Resolution=ADC_RESOLUTION_12B
+ADC1.Resolution=ADC_RESOLUTION_10B
 ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 ADC1.WatchdogChannel=ADC_CHANNEL_14
 ADC1.master=1
