--- a/Paradiddlepadled.ioc
+++ b/Paradiddlepadled.ioc
@@ -3,11 +3,10 @@ ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_14
 ADC1.ContinuousConvMode=ENABLE
 ADC1.EOCSelection=ADC_EOC_SEQ_CONV
 ADC1.EnableAnalogWatchDog=true
-ADC1.HighThreshold=260
-ADC1.IPParameters=Rank-3\#ChannelRegularConversion,master,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversionFlag,EnableAnalogWatchDog,WatchdogChannel,ITMode,HighThreshold,ContinuousConvMode,NbrOfConversion,EOCSelection,Resolution,InjNumberOfConversion,LowThreshold
+ADC1.HighThreshold=200
+ADC1.IPParameters=Rank-3\#ChannelRegularConversion,master,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversionFlag,EnableAnalogWatchDog,ContinuousConvMode,NbrOfConversion,EOCSelection,Resolution,InjNumberOfConversion,WatchdogChannel,ITMode,HighThreshold
 ADC1.ITMode=ENABLE
 ADC1.InjNumberOfConversion=0
-ADC1.LowThreshold=0
 ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-3\#ChannelRegularConversion=1
